// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
.c4 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c4:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c5 > .c0 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c3 {
  background-color: #FFFFFF;
  height: 60px;
}

.c3 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c3.tc-sticky {
  will-change: height,box-shadow;
}

.c3[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.010000000000000002);
}

.c3[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: rgba(219,219,219,0.9);
}

.c2 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c2 + .c1 {
  margin-top: -1px !important;
}

.c2:last-child {
  margin-bottom: 30px;
}

.c2.contains-tc-sticky {
  border-bottom-color: transparent;
}

@media (min-width:768px) {
  .c4 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c2 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S5 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S6 {
  line-height: 15px;
  margin-top: 15px;
}

.S7 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.S8 {
  margin-bottom: 20px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(29,29,27,1.00);
}

.IS3 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS4 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS5 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS6 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS7 {
  margin: 0;
}

.IS8 {
  display: none;
}

.IS9 {
  height: 100%;
  width: 100%;
}

.IS10 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS11 {
  height: 100%;
  width: 100%;
}

.IS12 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS13 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS14 {
  margin: 0;
}

.IS15 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
  width: 100%;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"author":{"@type":"Person","name":"Some byline"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
      </script>
    </Helmet>
    <div
      className="css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S7"
        >
          <div
            className="css-view-1dbjc4n r-marginBottom-eektet S1"
          >
            <Image />
          </div>
          <div
            className="css-view-1dbjc4n r-marginBottom-15d164r S3"
          >
            <div
              className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S2"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="css-reset-4rbku5 css-text-901oao r-color-1yqk5fa r-fontFamily-iirzy8 r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j S4"
          >
            Some Headline
          </h1>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleFlags />
          </div>
          <h2
            className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S5"
          >
            Some Standfirst
          </h2>
          <div
            className="css-view-1dbjc4n"
          >
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="css-view-1dbjc4n"
            />
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <div
                className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S6"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n r-marginBottom-117bsoe S8"
        >
          <figure
            className="IS7"
          >
            <div
              className="css-view-1dbjc4n IS6"
            >
              <div
                className="css-view-1dbjc4n IS5"
              >
                <div
                  className="IS4"
                >
                  <img
                    className="IS3"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c0 c1 c2"
        >
          <div
            className="IS8"
          />
          <div>
            <div
              className="c3"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="css-view-1dbjc4n"
      >
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <p
          className="c4"
        >
          Some content
        </p>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <figure
            className="IS14"
          >
            <div
              className="css-view-1dbjc4n IS13"
            >
              <div
                className="css-view-1dbjc4n IS12"
              >
                <div
                  className="IS11"
                >
                  <div
                    className="IS10"
                  >
                    <video
                      className="video-js IS9"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="css-view-1dbjc4n"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <AdContainer
          className="IS15"
        />
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the culture magazine 1`] = `
.c4 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c4:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c5 > .c0 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c3 {
  background-color: #FFFFFF;
  height: 60px;
}

.c3 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c3.tc-sticky {
  will-change: height,box-shadow;
}

.c3[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.010000000000000002);
}

.c3[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: rgba(219,219,219,0.9);
}

.c2 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c2 + .c1 {
  margin-top: -1px !important;
}

.c2:last-child {
  margin-bottom: 30px;
}

.c2.contains-tc-sticky {
  border-bottom-color: transparent;
}

@media (min-width:768px) {
  .c4 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c2 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S5 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S6 {
  line-height: 15px;
  margin-top: 15px;
}

.S7 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.S8 {
  margin-bottom: 20px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(123,0,70,1.00);
}

.IS3 {
  font-family: Flama-Bold;
}

.IS4 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS5 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS6 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS7 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS8 {
  margin: 0;
}

.IS9 {
  display: none;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS12 {
  height: 100%;
  width: 100%;
}

.IS13 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS14 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS15 {
  margin: 0;
}

.IS16 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
  width: 100%;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"author":{"@type":"Person","name":"Some byline"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
      </script>
    </Helmet>
    <div
      className="css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S7"
        >
          <div
            className="css-view-1dbjc4n r-marginBottom-eektet S1"
          >
            <Image />
          </div>
          <div
            className="css-view-1dbjc4n r-marginBottom-15d164r S3"
          >
            <div
              className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S2"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="css-reset-4rbku5 css-text-901oao r-color-1yqk5fa r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S4"
          >
            Some Headline
          </h1>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleFlags />
          </div>
          <h2
            className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S5"
          >
            Some Standfirst
          </h2>
          <div
            className="css-view-1dbjc4n"
          >
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="css-view-1dbjc4n"
            />
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <div
                className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S6"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n r-marginBottom-117bsoe S8"
        >
          <figure
            className="IS8"
          >
            <div
              className="css-view-1dbjc4n IS7"
            >
              <div
                className="css-view-1dbjc4n IS6"
              >
                <div
                  className="IS5"
                >
                  <img
                    className="IS4"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c0 c1 c2"
        >
          <div
            className="IS9"
          />
          <div>
            <div
              className="c3"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="css-view-1dbjc4n"
      >
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <p
          className="c4"
        >
          Some content
        </p>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <figure
            className="IS15"
          >
            <div
              className="css-view-1dbjc4n IS14"
            >
              <div
                className="css-view-1dbjc4n IS13"
              >
                <div
                  className="IS12"
                >
                  <div
                    className="IS11"
                  >
                    <video
                      className="video-js IS10"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="css-view-1dbjc4n"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <AdContainer
          className="IS16"
        />
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the style magazine 1`] = `
.c4 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c4:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c5 > .c0 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c3 {
  background-color: #FFFFFF;
  height: 60px;
}

.c3 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c3.tc-sticky {
  will-change: height,box-shadow;
}

.c3[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.010000000000000002);
}

.c3[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: rgba(219,219,219,0.9);
}

.c2 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c2 + .c1 {
  margin-top: -1px !important;
}

.c2:last-child {
  margin-bottom: 30px;
}

.c2.contains-tc-sticky {
  border-bottom-color: transparent;
}

@media (min-width:768px) {
  .c4 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c2 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S5 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S6 {
  line-height: 15px;
  margin-top: 15px;
}

.S7 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.S8 {
  margin-bottom: 20px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(188,51,133,1.00);
}

.IS3 {
  font-family: CenturyGothic-Bold;
  text-transform: uppercase;
}

.IS4 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS5 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS6 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS7 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS8 {
  margin: 0;
}

.IS9 {
  display: none;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS12 {
  height: 100%;
  width: 100%;
}

.IS13 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS14 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS15 {
  margin: 0;
}

.IS16 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
  width: 100%;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"author":{"@type":"Person","name":"Some byline"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
      </script>
    </Helmet>
    <div
      className="css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S7"
        >
          <div
            className="css-view-1dbjc4n r-marginBottom-eektet S1"
          >
            <Image />
          </div>
          <div
            className="css-view-1dbjc4n r-marginBottom-15d164r S3"
          >
            <div
              className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S2"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="css-reset-4rbku5 css-text-901oao r-color-1yqk5fa r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S4"
          >
            Some Headline
          </h1>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleFlags />
          </div>
          <h2
            className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S5"
          >
            Some Standfirst
          </h2>
          <div
            className="css-view-1dbjc4n"
          >
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="css-view-1dbjc4n"
            />
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <div
                className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S6"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n r-marginBottom-117bsoe S8"
        >
          <figure
            className="IS8"
          >
            <div
              className="css-view-1dbjc4n IS7"
            >
              <div
                className="css-view-1dbjc4n IS6"
              >
                <div
                  className="IS5"
                >
                  <img
                    className="IS4"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c0 c1 c2"
        >
          <div
            className="IS9"
          />
          <div>
            <div
              className="c3"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="css-view-1dbjc4n"
      >
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <p
          className="c4"
        >
          Some content
        </p>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <figure
            className="IS15"
          >
            <div
              className="css-view-1dbjc4n IS14"
            >
              <div
                className="css-view-1dbjc4n IS13"
              >
                <div
                  className="IS12"
                >
                  <div
                    className="IS11"
                  >
                    <video
                      className="video-js IS10"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="css-view-1dbjc4n"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <AdContainer
          className="IS16"
        />
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the sunday times magazine 1`] = `
.c4 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c4:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c5 > .c0 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c3 {
  background-color: #FFFFFF;
  height: 60px;
}

.c3 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c3.tc-sticky {
  will-change: height,box-shadow;
}

.c3[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.010000000000000002);
}

.c3[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: rgba(219,219,219,0.9);
}

.c2 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c2 + .c1 {
  margin-top: -1px !important;
}

.c2:last-child {
  margin-bottom: 30px;
}

.c2.contains-tc-sticky {
  border-bottom-color: transparent;
}

@media (min-width:768px) {
  .c4 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c2 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S5 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S6 {
  line-height: 15px;
  margin-top: 15px;
}

.S7 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.S8 {
  margin-bottom: 20px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(241,61,0,1.00);
}

.IS3 {
  font-family: Tiempos-Headline-Bold;
}

.IS4 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS5 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS6 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS7 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS8 {
  margin: 0;
}

.IS9 {
  display: none;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS12 {
  height: 100%;
  width: 100%;
}

.IS13 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS14 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS15 {
  margin: 0;
}

.IS16 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
  width: 100%;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"author":{"@type":"Person","name":"Some byline"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
      </script>
    </Helmet>
    <div
      className="css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S7"
        >
          <div
            className="css-view-1dbjc4n r-marginBottom-eektet S1"
          >
            <Image />
          </div>
          <div
            className="css-view-1dbjc4n r-marginBottom-15d164r S3"
          >
            <div
              className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S2"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="css-reset-4rbku5 css-text-901oao r-color-1yqk5fa r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S4"
          >
            Some Headline
          </h1>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleFlags />
          </div>
          <h2
            className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S5"
          >
            Some Standfirst
          </h2>
          <div
            className="css-view-1dbjc4n"
          >
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="css-view-1dbjc4n"
            />
            <div
              className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <div
                className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S6"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n r-marginBottom-117bsoe S8"
        >
          <figure
            className="IS8"
          >
            <div
              className="css-view-1dbjc4n IS7"
            >
              <div
                className="css-view-1dbjc4n IS6"
              >
                <div
                  className="IS5"
                >
                  <img
                    className="IS4"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c0 c1 c2"
        >
          <div
            className="IS9"
          />
          <div>
            <div
              className="c3"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="css-view-1dbjc4n"
      >
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <p
          className="c4"
        >
          Some content
        </p>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <figure
            className="IS15"
          >
            <div
              className="css-view-1dbjc4n IS14"
            >
              <div
                className="css-view-1dbjc4n IS13"
              >
                <div
                  className="IS12"
                >
                  <div
                    className="IS11"
                  >
                    <video
                      className="video-js IS10"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="css-view-1dbjc4n"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <AdContainer
          className="IS16"
        />
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
